--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,7 +23,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Alegreya Sans', Arial, sans-serif;
-  color: #fff;
+  color: #fff !important;
 }
 body {
   letter-spacing: 0.18em;
@@ -34,7 +34,7 @@ h1 {
 }
 h1 a {
   display: block;
-  padding: 0 10px;
+  padding: 15px;
   font-size: 24px;
 }
 h3 {
@@ -50,6 +50,10 @@ h3 {
 .project,
 .skill {
   font-size: 1.5vw;
+}
+.projects,
+.skills {
+  font-size: 2vw;
 }
 .title {
 /* style used for firstSection */
@@ -84,10 +88,6 @@ h3 {
   background-size: cover;
   z-index: -1;
 }
-#fp-nav ul li a span,
-.fp-slidesNav ul li a span {
-  background: #fff !important;
-}
 /* section ends */
 /* interface/layout */
 .columns {
@@ -103,7 +103,8 @@ h3 {
   color: #fff;
   text-decoration: none;
   background-color: #e74c3c;
-  border-bottom: 5px solid #c0392b;
+  border: none;
+  border-bottom: 5px solid #c0392b !important;
   text-shadow: 0px -2px #c0392b;
 /* Animation */
   transition: all 0.1s;
@@ -127,94 +128,6 @@ h3 {
   -webkit-transform: translate(0px, 5px);
   border-bottom: 1px solid;
 }
-.project>li {
-  display: inline-block;
-  clear: both;
-/*border-style solid !important*/
-  padding: 10px;
-  border-width: thin;
-}
-/* interface/layout ends */
-.modal {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: #000;
-  background-color: rgba(0,0,0,0.4);
-}
-.modal-content {
-  background-color: #fefefe;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 500px;
-  border-radius: 25px;
-  height: calc(100% - 120px);
-  margin: auto;
-  margin-top: 5%;
-}
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-.slides {
-  padding: 0;
-  width: 45vh;
-  height: 80vh;
-  display: block;
-  margin: 0 auto;
-  position: relative;
-}
-.slides * {
-  user-select: none;
-  -ms-user-select: none;
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
-}
-.slides input {
-  display: none;
-}
-.slide-container {
-  display: block;
-}
-.slide {
-  top: 0;
-  opacity: 0;
-  width: 45vh;
-  height: 80vh;
-  display: block;
-  transform: scale(0);
-  transition: all 0.7s ease-in-out;
-}
-.slide img {
-  width: 45vh;
-  height: 80vh;
-}
-.slide:hover + .nav label {
-  opacity: 0.5;
-}
-input:checked + .slide-container .slide {
-  opacity: 1;
-  transform: scale(1);
-  transition: opacity 1s ease-in-out;
-}
-input:checked + .slide-container .nav label {
-  display: block;
-}
 .nav-dots {
   width: 100%;
   bottom: 9px;
@@ -237,18 +150,30 @@ input:checked + .slide-container .nav label {
   cursor: pointer;
   background-color: rgba(0,0,0,0.8);
 }
-input#img-1:checked ~ .nav-dots label#img-dot-1,
-input#img-2:checked ~ .nav-dots label#img-dot-2,
-input#img-3:checked ~ .nav-dots label#img-dot-3,
-input#img-4:checked ~ .nav-dots label#img-dot-4,
-input#img-5:checked ~ .nav-dots label#img-dot-5,
-input#img-6:checked ~ .nav-dots label#img-dot-6 {
-  background: rgba(0,0,0,0.8);
-}
-.fp-tableCell {
-  height: 80vh !important;
-}
 .bottom>ul>li>a>span {
   background: #333 !important;
   bottom: 20px;
+}
+.swiper-container {
+  width: 600px;
+  height: 80vh;
+}
+.is-selected {
+  z-index: 10;
+}
+.flickity-viewport {
+  height: 80vh !important;
+  width: 45vh !important;
+}
+.carousel-cell > img {
+  width: 45vh !important;
+  height: 80vh !important;
+  margin-top: 2vh;
+}
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+  background: #fff;
+}
+.flickity-page-dots {
+  bottom: -1vh !important;
 }
